--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ berkeley-function-call-leaderboard/bfcl_eval/scripts/ground_truth_conversation/
 
 # Ignore the wandb cache:
 **/wandb/
+
+# model_config.py.backup
+model_config.py.backup.*
